:recycle:  [refactor] 요율 등록 로직 수정